直方图练习

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/colorPrimaryDark"
+            android:background="#FFFFFF"
             app:layout_constraintBottom_toTopOf="@id/rv_home_items"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
